# readthedocs.org

./: .bowerrc  .codecov.yml  .codespellrc  .coveragerc  .deepsource.toml  .dockerignore  .env  .eslintrc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pep8  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .ruff.toml  .shipwright.json  .style.yapf  .travis.yml  .vale.ini  AGENTS.md  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  DATA_MIGRATION_PLAN.md  Dockerfile  Dockerfile.base  Dockerfile.devbuild  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.bsd  LICENSE.mit  MANIFEST.in  PUSH_AUTOMATION_RULES.md  Pipfile  README  (+53 more)
.circleci/: config-conditional-builds.yml  config.yml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: session-start.sh
.claude/notes/: ftd-merge-base-refresh-design.md
.github/: CODEOWNERS  CONTRIBUTING.rst  FUNDING.yml  ISSUE_TEMPLATE.md  ISSUE_TEMPLATE.rst  auto_assign.yml  config.yml  copilot-instructions.md  kraken-logon  mergeable.yml  no-response.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: anchore-analysis.yml  apisec-scan-analysis.yml  checkmarx-analysis.yml  codacy-analysis.yml  codeql-analysis.yml  codeql.yml  codescan-analysis.yml  crunch42-analysis.yml  devskim-analysis.yml  kubesec-analysis.yml  lint_python.yml  lock.yml  main.yml  main.yml.  nowsecure-analysis.yml  ossar-analysis.yml  pip-tools.yaml  pmd-analysis.yml  pr-preview-links.yaml  prisma-analysis.yml  semgrep-analysis.yml  shiftleft-analysis.yml  snyk-container-analysis.yml  snyk-infrastructure-analysis.yml  stackhawk-analysis.yml  synopsys-io-analysis.yml  sysdig-scan-analysis.yml  trivy-analysis.yml  veracode-analysis.yml  xanitizer-analysis.yml
.tx/: config
acceptance/: builds.feature  environment.py  web.feature
acceptance/steps/: websteps.py
api/: base.py
bookmarks/: admin.py  models.py  urls.py  views.py
builds/: admin.py  models.py  urls.py  views.py
builds/migrations/: 0003_auto__chg_field_version_slug.py  0004_auto__add_field_build_version.py  0005_auto__chg_field_build_version__del_unique_build_version.py  0007_add_aliases.py  0008_fix_aliases.py  0009_fix_aliases_again.py
channels/: __init__.py
contrib/: Dockerfile  add-project.py  changelog.hbs  docker_build.sh  readme.rst  supervisord.conf
core/: admin.py  forms.py  middleware.py  models.py  search_sites.py  tests.py  views.py
core/fixtures/: eric.json  flag_types.json
core/migrations/: 0001_initial.py  0002_auto__add_field_userprofile_allow_email.py
core/templatetags/: core_tags.py
deploy/: README  Vagrantfile  delete_stale_projects.py  fabfile.py  flask-redirects.py  nginx-smoke-test.py  solo.rb
deploy/chef/: README  knife.rb  node.json
deploy/docker/: DockerFile  run.sh
deploy/fab/: README.rst  fabfile.py  requirements.txt
deploy/nginx/: app.nginx.conf  lb.nginx.conf  main.nginx.conf
doc_builder/: __init__.py  base.py
docker/: Dockerfile  Dockerfile.devpi  create_superuser.py  frontend.dockerfile  run.sh
dockerfiles/: Dockerfile  Dockerfile.isolated-builder  Dockerfile.wrangler  README.rst  docker-compose-assets.yml  force-readthedocs-addons.js  tasks.py
docs/: .rstcheck.cfg  .vale.ini  Curang judi online  Makefile  abandoned-projects.rst  about.rst  advertising-details.rst  alternate_domains.rst  analytics.rst  api.rst  architecture.rst  automatic-redirects.rst  automation-rules.rst  awesome.rst  badges.rst  build-notifications.rst  builds.rst  canonical.rst  changelog.md  changelog.rst  choosing-a-site.rst  claim.rst  code-of-conduct.rst  conda.rst  conf.py  connected-accounts.rst  contribute.rst  custom_domains.rst  default-versions.rst  design.rst  design_decisions.rst  development.rst  doc_extensions.py  docs.rst  downloadable-documentation.rst  downloadable-formats.rst  embed-api.rst  embed.rst  environment-variables.rst  ethical-advertising.rst  (+47 more)
editor/: models.py  tasks.py  urls.py  views.py
emails/: .gitignore  README.md  build.config.json  build.js  package-lock.json  package.json
media/: fonts  humans.txt  readthedocsbranding.ai  robots.txt
nginx/: web.conf
projects/: admin.py  constants.py  exceptions.py  forms.py  models.py  search_indexes.py  tasks.py  urls.py  utils.py  views.py
readthedocs/: __init__.py  celery.py  celery_conf.py  conftest.py  constants.py  forms.py  gunicorn_conf.py  manage.py  urls.py  worker.py  wsgi.py
requirements/: README.rst  auto-lint.txt  cov.txt  debug.in  debug.txt  deploy.in  deploy.txt  docker.in  docker.txt  docs-lint.txt  docs.in  docs.txt  documentation_requirements.txt  docutils-test.txt  lint.in  lint.txt  local-docs-build.txt  main.txt  onebox.txt  pip.in  pip.txt  testing.in  testing.txt
rtd_scripts/: get_vcs_info.py
scripts/: build_tools_download.py  build_tools_local_delete.py  compile_version_upload_s3.sh  python-build.diff  snapshot_pr1_forms.py  snapshot_pr2_forms.py
settings/: __init__.py  base.py  dev.db  postgres.py  sqlite.py
templates/: 404.html  500.html  base.html  github.html  homepage.html  post_commit.html
vcs_support/: base.py  utils.py
watching/: admin.py  models.py  urls.py
(+4777 files in other folders)
