[metadata]
name = readthedocs
version = 7.4.0
license = MIT
description = Read the Docs builds and hosts documentation
author = Read the Docs, Inc
author_email = dev@readthedocs.com
url = http://readthedocs.org
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.8
	Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = readthedocs
github_repo = readthedocs.org

[codespell]
ignore-words-list = ba,configurtion,ded,hel,perfom,wile
skip = *.css,*.fjson,*.js,*.po,*.svg
