[bumpversion]
current_version = 5.23.1
commit = false
tag = false
allow_dirty = true
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)((?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}{release}{dev}
	{major}.{minor}.{patch}

# Bump2version alters this file to track the version, and always moves the block
# above to the top of the file.
[bumpversion:part:release]
optional_value = release
first_value = alpha
values = 
	alpha
	release

[bumpversion:part:dev]
first_value = 1

[bumpversion:file:setup.cfg]

[bumpversion:file:readthedocs/__init__.py]

[bumpversion:file:package.json]
search = "version": "{current_version}",
replace = "version": "{new_version}",

[bumpversion:file:package-lock.json]
search = "version": "{current_version}",
replace = "version": "{new_version}",

[metadata]
name = readthedocs
version = 5.23.1
license = MIT
description = Read the Docs builds and hosts documentation
author = Read the Docs, Inc
author_email = dev@readthedocs.com
url = http://readthedocs.org
classifiers = 
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = readthedocs
github_repo = readthedocs.org
