[metadata]
name = readthedocs
version = 15.8.0
license = MIT
description = Read the Docs builds and hosts documentation
author = Read the Docs, Inc
author_email = dev@readthedocs.com
url = http://readthedocs.org
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = readthedocs
github_repo = readthedocs.org

[bumpver]
current_version = "15.8.0"
version_pattern = "MAJOR.MINOR.PATCH[TAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = False
tag = False
push = False

[bumpver:file_patterns]
setup.cfg =
	version = {version}
	current_version = "{version}"
docs/conf.py =
	version = "{version}"
readthedocs/__init__.py =
	__version__ = "{version}"
